--- a/substack/articles/2024.07-12 - Flattening XML/scratchpad.ipynb
+++ b/substack/articles/2024.07-12 - Flattening XML/scratchpad.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,13 +172,16 @@
     "    root = ET.Element(\"states\")\n",
     "\n",
     "    data = [\n",
-    "        {\"name\": \"Georgia\", \"population\": \"10711908\", \"largest_city\": \"Atlanta\", \"land_mass_sqmi\": \"57906\"},\n",
-    "        {\"name\": \"California\", \"population\": \"39538223\", \"largest_city\": \"Los Angeles\", \"land_mass_sqmi\": \"163696\", \"water_sqmi\": \"7737\"},\n",
+    "        {\"name\": \"Georgia\", \"nickname\": \"Peach State\", \"climate\":\"warm\", \"population\": \"10711908\", \"largest_city\": \"Atlanta\", \"land_mass_sqmi\": \"57906\"},\n",
+    "        {\"name\": \"California\", \"nickname\": \"Granola State\", \"population\": \"39538223\", \"largest_city\": \"Los Angeles\", \"land_mass_sqmi\": \"163696\", \"water_sqmi\": \"7737\"},\n",
     "    ]\n",
     "\n",
     "    for state in data:\n",
     "        state_element = ET.SubElement(root, \"state\")\n",
-    "        name_element = ET.SubElement(state_element, \"name\")\n",
+    "        attributes = {\"nickname\": state[\"nickname\"]}\n",
+    "        if \"climate\" in state:\n",
+    "            attributes[\"climate\"] = state[\"climate\"]\n",
+    "        name_element = ET.SubElement(state_element, \"name\", **attributes)\n",
     "        name_element.text = state[\"name\"]\n",
     "        population_element = ET.SubElement(state_element, \"population\")\n",
     "        population_element.text = state[\"population\"]\n",
@@ -203,9 +206,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'climate'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[30], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m gen_simple_xml()\n\u001b[0;32m----> 2\u001b[0m \u001b[43mgen_simple_xml_varying_elements\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[29], line 14\u001b[0m, in \u001b[0;36mgen_simple_xml_varying_elements\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m state \u001b[38;5;129;01min\u001b[39;00m data:\n\u001b[1;32m     13\u001b[0m     state_element \u001b[38;5;241m=\u001b[39m ET\u001b[38;5;241m.\u001b[39mSubElement(root, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstate\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 14\u001b[0m     name_element \u001b[38;5;241m=\u001b[39m ET\u001b[38;5;241m.\u001b[39mSubElement(state_element, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m, nickname\u001b[38;5;241m=\u001b[39mstate[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnickname\u001b[39m\u001b[38;5;124m\"\u001b[39m], climate\u001b[38;5;241m=\u001b[39m\u001b[43mstate\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mclimate\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[1;32m     15\u001b[0m     name_element\u001b[38;5;241m.\u001b[39mtext \u001b[38;5;241m=\u001b[39m state[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m     16\u001b[0m     population_element \u001b[38;5;241m=\u001b[39m ET\u001b[38;5;241m.\u001b[39mSubElement(state_element, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpopulation\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'climate'"
+     ]
+    }
+   ],
    "source": [
     "gen_simple_xml()\n",
     "gen_simple_xml_varying_elements()"
