--- a/substack/articles/2024.07-12 - Flattening XML/scratchpad.ipynb
+++ b/substack/articles/2024.07-12 - Flattening XML/scratchpad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,39 +89,78 @@
     "        csv_writer.writerow(headers)\n",
     "\n",
     "        for k, v in data.items():\n",
-    "            csv_writer.writerow([k,v])\n",
-    "        \n",
-    "\n",
-    "\n"
+    "            csv_writer.writerow([k,v])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "<states>\n",
+      "  <state>\n",
+      "    <name>Texas</name>\n",
+      "    <population>30503301</population>\n",
+      "    <largest_city>Houston</largest_city>\n",
+      "    <land_mass_sqmi>261232</land_mass_sqmi>\n",
+      "  </state>\n",
+      "  <state>\n",
+      "    <name>New York</name>\n",
+      "    <population>19571216</population>\n",
+      "    <largest_city>New York City</largest_city>\n",
+      "    <land_mass_sqmi>54555</land_mass_sqmi>\n",
+      "  </state>\n",
+      "</states>\n",
+      "\n",
+      "./files/states_simple.csv\n",
+      "\n",
+      "<states>\n",
+      "  <state>\n",
+      "    <name nickname=\"Peach State\">Georgia</name>\n",
+      "    <population>10711908</population>\n",
+      "    <largest_city>Atlanta</largest_city>\n",
+      "    <land_mass_sqmi>57906</land_mass_sqmi>\n",
+      "    <misc>\n",
+      "      <climate>warm</climate>\n",
+      "      <state_flower>Cherokee Rose</state_flower>\n",
+      "    </misc>\n",
+      "  </state>\n",
+      "  <state>\n",
+      "    <name nickname=\"Granola State\">California</name>\n",
+      "    <population>39538223</population>\n",
+      "    <largest_city>Los Angeles</largest_city>\n",
+      "    <land_mass_sqmi>163696</land_mass_sqmi>\n",
+      "    <water_sqmi>7737</water_sqmi>\n",
+      "    <misc>\n",
+      "      <bird>California Quail</bird>\n",
+      "    </misc>\n",
+      "  </state>\n",
+      "</states>\n",
+      "\n",
+      "./files/gen_xml_varying_elements_and_attrs.csv\n"
+     ]
+    }
+   ],
    "source": [
-    "x_path = 'states.xml'\n",
-    "c_path = 'states.csv'\n",
+    "x_path = './files/states_simple.xml'\n",
+    "c_path = './files/states_simple.csv'\n",
     "\n",
     "flatten_xml_to_csv(x_path, c_path)\n",
     "\n",
-    "x_path = 'states2.xml'\n",
-    "c_path = 'states2.csv'\n",
+    "x_path = './files/gen_xml_varying_elements_and_attrs.xml'\n",
+    "c_path = './files/gen_xml_varying_elements_and_attrs.csv'\n",
     "\n",
     "flatten_xml_to_csv(x_path, c_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,27 +199,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def gen_simple_xml_varying_elements_and_attrs():\n",
+    "def gen_xml_varying_elements_and_attrs():\n",
     "    import xml.etree.ElementTree as ET\n",
     "    from xml.dom.minidom import parseString\n",
     "\n",
     "    root = ET.Element(\"states\")\n",
     "\n",
     "    data = [\n",
-    "        {\"name\": \"Georgia\", \"nickname\": \"Peach State\", \"climate\":\"warm\", \"population\": \"10711908\", \"largest_city\": \"Atlanta\", \"land_mass_sqmi\": \"57906\"},\n",
-    "        {\"name\": \"California\", \"nickname\": \"Granola State\", \"population\": \"39538223\", \"largest_city\": \"Los Angeles\", \"land_mass_sqmi\": \"163696\", \"water_sqmi\": \"7737\"},\n",
+    "        {\"name\": \"Georgia\", \"nickname\": \"Peach State\", \"population\": \"10711908\", \"largest_city\": \"Atlanta\", \"land_mass_sqmi\": \"57906\", \"misc\": [{\"climate\": \"warm\"}, {\"state_flower\": \"Cherokee Rose\"}]},\n",
+    "        {\"name\": \"California\", \"nickname\": \"Granola State\", \"population\": \"39538223\", \"largest_city\": \"Los Angeles\", \"land_mass_sqmi\": \"163696\", \"water_sqmi\": \"7737\", \"misc\":[{\"bird\":\"California Quail\"}]},\n",
     "    ]\n",
     "\n",
     "    for state in data:\n",
     "        state_element = ET.SubElement(root, \"state\")\n",
     "        attributes = {\"nickname\": state[\"nickname\"]}\n",
-    "        if \"climate\" in state:\n",
-    "            attributes[\"climate\"] = state[\"climate\"]\n",
     "        name_element = ET.SubElement(state_element, \"name\", **attributes)\n",
     "        name_element.text = state[\"name\"]\n",
     "        population_element = ET.SubElement(state_element, \"population\")\n",
@@ -192,6 +228,12 @@
     "        if \"water_sqmi\" in state:\n",
     "            water_mass_element = ET.SubElement(state_element, \"water_sqmi\")\n",
     "            water_mass_element.text = state[\"water_sqmi\"]\n",
+    "        if \"misc\" in state:\n",
+    "            misc_el = ET.SubElement(state_element, \"misc\")\n",
+    "            for misc_item in state['misc']:\n",
+    "                for key, value in misc_item.items():\n",
+    "                    misc_sub_el = ET.SubElement(misc_el, key)\n",
+    "                    misc_sub_el.text = value\n",
     "\n",
     "    # Convert the ElementTree to a string\n",
     "    rough_string = ET.tostring(root, encoding=\"utf-8\")\n",
@@ -200,32 +242,32 @@
     "    pretty_xml_as_string = reparsed.toprettyxml(indent=\"  \")\n",
     "\n",
     "    # Write the pretty-printed XML to a file\n",
-    "    with open(\"./files/gen_simple_xml_varying_elements_and_attrs.xml\", \"w\", encoding=\"utf-8\") as f:\n",
-    "        f.write(pretty_xml_as_string)"
+    "    with open(\"./files/gen_xml_varying_elements_and_attrs.xml\", \"w\", encoding=\"utf-8\") as f:\n",
+    "        f.write(pretty_xml_as_string)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "gen_simple_xml()\n",
-    "gen_simple_xml_varying_elements_and_attrs()"
+    "gen_xml_varying_elements_and_attrs()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         name  population largest_city  land_mass_sqmi  water_sqmi\n",
-      "0     Georgia    10711908      Atlanta           57906         NaN\n",
-      "1  California    39538223  Los Angeles          163696      7737.0\n"
+      "         name  population largest_city  land_mass_sqmi      misc  water_sqmi\n",
+      "0     Georgia    10711908      Atlanta           57906  \\n               NaN\n",
+      "1  California    39538223  Los Angeles          163696  \\n            7737.0\n"
      ]
     }
    ],
@@ -238,108 +280,6 @@
     "\n",
     "# Display the DataFrame\n",
     "print(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XML file has been generated.\n"
-     ]
-    }
-   ],
-   "source": [
-    "def gen_xml_doc_1():\n",
-    "    import xml.etree.ElementTree as ET\n",
-    "\n",
-    "    # Create the root element\n",
-    "    root = ET.Element(\"states\")\n",
-    "\n",
-    "    # Define the states data\n",
-    "    states_data = [\n",
-    "        {\"name\": \"California\", \"population\": \"39538223\", \"city\": \"Los Angeles\"},\n",
-    "        {\"name\": \"Texas\", \"population\": \"29145505\", \"city\": \"Houston\"},\n",
-    "        {\"name\": \"Florida\", \"population\": \"21538187\", \"city\": \"Miami\"},\n",
-    "        {\"name\": \"New York\", \"population\": \"20201249\", \"city\": \"New York City\"},\n",
-    "        {\"name\": \"Pennsylvania\", \"population\": \"13002700\", \"city\": \"Philadelphia\"},\n",
-    "        {\"name\": \"Illinois\", \"population\": \"12812508\", \"city\": \"Chicago\"},\n",
-    "        {\"name\": \"Ohio\", \"population\": \"11799448\", \"city\": \"Columbus\"},\n",
-    "        {\"name\": \"Georgia\", \"population\": \"10711908\", \"city\": \"Atlanta\"},\n",
-    "        {\"name\": \"North Carolina\", \"population\": \"10439388\", \"city\": \"Charlotte\"},\n",
-    "        {\"name\": \"Michigan\", \"population\": \"10077331\", \"city\": \"Detroit\"}\n",
-    "    ]\n",
-    "\n",
-    "    # Populate the XML tree with state data\n",
-    "    for state in states_data:\n",
-    "        state_element = ET.SubElement(root, \"state\")\n",
-    "        name_element = ET.SubElement(state_element, \"name\")\n",
-    "        name_element.text = state[\"name\"]\n",
-    "        population_element = ET.SubElement(state_element, \"population\")\n",
-    "        population_element.text = state[\"population\"]\n",
-    "        city_element = ET.SubElement(state_element, \"city\")\n",
-    "        city_element.text = state[\"city\"]\n",
-    "\n",
-    "    # Create the tree and write to an XML file\n",
-    "    tree = ET.ElementTree(root)\n",
-    "    tree.write(\"states.xml\", encoding=\"utf-8\", xml_declaration=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def gen_xml_doc_2():\n",
-    "    import xml.etree.ElementTree as ET\n",
-    "\n",
-    "    # Create the root element\n",
-    "    root = ET.Element(\"states\")\n",
-    "\n",
-    "    # Define the states data\n",
-    "    states_data = [\n",
-    "        {\"name\": \"California\", \"population\": \"39538223\", \"city\": \"Los Angeles\", \"land_size\": \"423967\"},\n",
-    "        {\"name\": \"Texas\", \"population\": \"29145505\", \"city\": \"Houston\", \"land_size\": \"695662\"},\n",
-    "        {\"name\": \"Florida\", \"population\": \"21538187\", \"city\": \"Miami\", \"land_size\": \"170312\"},\n",
-    "        {\"name\": \"New York\", \"population\": \"20201249\", \"city\": \"New York City\", \"land_size\": \"141297\"},\n",
-    "        {\"name\": \"Pennsylvania\", \"population\": \"13002700\", \"city\": \"Philadelphia\", \"land_size\": \"119280\"},\n",
-    "        {\"name\": \"Illinois\", \"population\": \"12812508\", \"city\": \"Chicago\", \"land_size\": \"149995\"},\n",
-    "        {\"name\": \"Ohio\", \"population\": \"11799448\", \"city\": \"Columbus\", \"land_size\": \"116096\"},\n",
-    "        {\"name\": \"Georgia\", \"population\": \"10711908\", \"city\": \"Atlanta\", \"land_size\": \"153910\"},\n",
-    "        {\"name\": \"North Carolina\", \"population\": \"10439388\", \"city\": \"Charlotte\", \"land_size\": \"139391\"},\n",
-    "        {\"name\": \"Michigan\", \"population\": \"10077331\", \"city\": \"Detroit\", \"land_size\": \"250487\"}\n",
-    "    ]\n",
-    "\n",
-    "    # Populate the XML tree with state data\n",
-    "    for state in states_data:\n",
-    "        state_element = ET.SubElement(root, \"state\", land_size=state[\"land_size\"])\n",
-    "        \n",
-    "        name_element = ET.SubElement(state_element, \"name\")\n",
-    "        name_element.text = state[\"name\"]\n",
-    "        \n",
-    "        population_element = ET.SubElement(state_element, \"population\")\n",
-    "        population_element.text = state[\"population\"]\n",
-    "        \n",
-    "        city_element = ET.SubElement(state_element, \"city\")\n",
-    "        city_element.text = state[\"city\"]\n",
-    "\n",
-    "    # Create the tree and write to an XML file\n",
-    "    tree = ET.ElementTree(root)\n",
-    "    tree.write(\"states2.xml\", encoding=\"utf-8\", xml_declaration=True)\n",
-    "\n",
-    "gen_xml_doc_2()"
    ]
   },
   {
