--- a/substack/articles/2024.07-12 - Flattening XML/scratchpad.ipynb
+++ b/substack/articles/2024.07-12 - Flattening XML/scratchpad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "    except ValueError:\n",
     "        pass\n",
     "\n",
-    "    print(xml_payload)\n",
+    "    #print(xml_payload)\n",
     "\n",
     "    xd = xmltodict.parse(xml_payload)\n",
     "\n",
@@ -80,7 +80,7 @@
     "    if \"~\" in csv_file_path:\n",
     "        csv_file_path = os.path.expanduser(csv_file_path)\n",
     "\n",
-    "    print(csv_file_path)\n",
+    "    #print(csv_file_path)\n",
     "\n",
     "    with open(csv_file_path, 'w', newline='') as f:\n",
     "        csv_writer = csv.writer(f)\n",
@@ -94,88 +94,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "<states>\n",
-      "  <state>\n",
-      "    <name>Texas</name>\n",
-      "    <population>30503301</population>\n",
-      "    <largest_city>Houston</largest_city>\n",
-      "    <land_mass_sqmi>261232</land_mass_sqmi>\n",
-      "  </state>\n",
-      "  <state>\n",
-      "    <name>New York</name>\n",
-      "    <population>19571216</population>\n",
-      "    <largest_city>New York City</largest_city>\n",
-      "    <land_mass_sqmi>54555</land_mass_sqmi>\n",
-      "  </state>\n",
-      "</states>\n",
-      "\n",
-      "./files/states_simple.csv\n",
-      "\n",
-      "<states>\n",
-      "  <state>\n",
-      "    <name nickname=\"Peach State\">Georgia</name>\n",
-      "    <population>10711908</population>\n",
-      "    <largest_city>Atlanta</largest_city>\n",
-      "    <land_mass_sqmi>57906</land_mass_sqmi>\n",
-      "    <misc>\n",
-      "      <climate>warm</climate>\n",
-      "      <state_flower>Cherokee Rose</state_flower>\n",
-      "    </misc>\n",
-      "  </state>\n",
-      "  <state>\n",
-      "    <name nickname=\"Granola State\">California</name>\n",
-      "    <population>39538223</population>\n",
-      "    <largest_city>Los Angeles</largest_city>\n",
-      "    <land_mass_sqmi>163696</land_mass_sqmi>\n",
-      "    <water_sqmi>7737</water_sqmi>\n",
-      "    <misc>\n",
-      "      <bird>California Quail</bird>\n",
-      "    </misc>\n",
-      "  </state>\n",
-      "</states>\n",
-      "\n",
-      "./files/gen_xml_varying_elements_and_attrs.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "x_path = './files/states_simple.xml'\n",
-    "c_path = './files/states_simple.csv'\n",
-    "\n",
-    "flatten_xml_to_csv(x_path, c_path)\n",
-    "\n",
-    "x_path = './files/gen_xml_varying_elements_and_attrs.xml'\n",
-    "c_path = './files/gen_xml_varying_elements_and_attrs.csv'\n",
-    "\n",
-    "flatten_xml_to_csv(x_path, c_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gen_simple_xml():\n",
+    "def states_simple_xml():\n",
     "    import xml.etree.ElementTree as ET\n",
     "    from xml.dom.minidom import parseString\n",
     "\n",
     "    root = ET.Element(\"states\")\n",
     "\n",
     "    data = [\n",
-    "        {\"name\": \"Texas\", \"population\": \"30503301\", \"largest_city\": \"Houston\", \"land_mass_sqmi\": \"261232\"},\n",
-    "        {\"name\": \"New York\", \"population\": \"19571216\", \"largest_city\": \"New York City\", \"land_mass_sqmi\": \"54555\"},\n",
+    "        {\"name\": \"Georgia\", \"nickname\": \"Peach State\", \"population\": \"10711908\", \"largest_city\": \"Atlanta\", \"land_mass_sqmi\": \"57906\"},\n",
+    "        {\"name\": \"California\", \"nickname\": \"Granola State\", \"population\": \"39538223\", \"largest_city\": \"Los Angeles\", \"land_mass_sqmi\": \"163696\"},\n",
     "    ]\n",
     "\n",
     "    for state in data:\n",
+    "\n",
+    "        root = ET.Element(\"states\")\n",
     "        state_element = ET.SubElement(root, \"state\")\n",
     "        name_element = ET.SubElement(state_element, \"name\")\n",
     "        name_element.text = state[\"name\"]\n",
@@ -186,24 +122,34 @@
     "        land_mass_element = ET.SubElement(state_element, \"land_mass_sqmi\")\n",
     "        land_mass_element.text = state[\"land_mass_sqmi\"]\n",
     "\n",
-    "    # Convert the ElementTree to a string\n",
-    "    rough_string = ET.tostring(root, encoding=\"utf-8\")\n",
-    "    # Parse the string with minidom for pretty printing\n",
-    "    reparsed = parseString(rough_string)\n",
-    "    pretty_xml_as_string = reparsed.toprettyxml(indent=\"  \")\n",
+    "        # Convert the ElementTree to a string\n",
+    "        rough_string = ET.tostring(root, encoding=\"utf-8\")\n",
+    "        # Parse the string with minidom for pretty printing\n",
+    "        reparsed = parseString(rough_string)\n",
+    "        pretty_xml_as_string = reparsed.toprettyxml(indent=\"  \")\n",
     "\n",
-    "    # Write the pretty-printed XML to a file\n",
-    "    with open(\"./files/states_simple.xml\", \"w\", encoding=\"utf-8\") as f:\n",
-    "        f.write(pretty_xml_as_string)"
+    "        # Write the pretty-printed XML to a file\n",
+    "        with open(f\"./files/{state['name']}.xml\", \"w\", encoding=\"utf-8\") as f:\n",
+    "            f.write(pretty_xml_as_string)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gen_xml_varying_elements_and_attrs():\n",
+    "states_simple_xml()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def states_complex_xml():\n",
     "    import xml.etree.ElementTree as ET\n",
     "    from xml.dom.minidom import parseString\n",
     "\n",
@@ -215,6 +161,7 @@
     "    ]\n",
     "\n",
     "    for state in data:\n",
+    "        root = ET.Element(\"states\")\n",
     "        state_element = ET.SubElement(root, \"state\")\n",
     "        attributes = {\"nickname\": state[\"nickname\"]}\n",
     "        name_element = ET.SubElement(state_element, \"name\", **attributes)\n",
@@ -235,30 +182,67 @@
     "                    misc_sub_el = ET.SubElement(misc_el, key)\n",
     "                    misc_sub_el.text = value\n",
     "\n",
-    "    # Convert the ElementTree to a string\n",
-    "    rough_string = ET.tostring(root, encoding=\"utf-8\")\n",
-    "    # Parse the string with minidom for pretty printing\n",
-    "    reparsed = parseString(rough_string)\n",
-    "    pretty_xml_as_string = reparsed.toprettyxml(indent=\"  \")\n",
+    "        # Convert the ElementTree to a string\n",
+    "        rough_string = ET.tostring(root, encoding=\"utf-8\")\n",
+    "        # Parse the string with minidom for pretty printing\n",
+    "        reparsed = parseString(rough_string)\n",
+    "        pretty_xml_as_string = reparsed.toprettyxml(indent=\"  \")\n",
     "\n",
-    "    # Write the pretty-printed XML to a file\n",
-    "    with open(\"./files/gen_xml_varying_elements_and_attrs.xml\", \"w\", encoding=\"utf-8\") as f:\n",
-    "        f.write(pretty_xml_as_string)\n"
+    "        # Write the pretty-printed XML to a file\n",
+    "        with open(f\"./files/{state['name']}_complex.xml\", \"w\", encoding=\"utf-8\") as f:\n",
+    "            f.write(pretty_xml_as_string)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gen_simple_xml()\n",
-    "gen_xml_varying_elements_and_attrs()"
+    "states_simple_xml()\n",
+    "states_complex_xml()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "files = ['./files/California.xml', './files/Georgia.xml', './files/California_complex.xml', './files/Georgia_complex.xml']\n",
+    "\n",
+    "for file_path in files:\n",
+    "    directory, fname = os.path.split(file_path)\n",
+    "    csv_path = os.path.join(directory, fname.replace('xml','csv'))\n",
+    "    flatten_xml_to_csv(file_path, csv_path)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       name  population   largest_city  land_mass_sqmi\n",
+      "0     Texas    30503301        Houston          261232\n",
+      "1  New York    19571216  New York City           54555\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_xml('./files/states_simple.xml')\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -272,13 +256,7 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "# Read the XML file\n",
-    "xml_file = './files/gen_simple_xml_varying_elements_and_attrs.xml'\n",
-    "df = pd.read_xml(xml_file)\n",
-    "\n",
-    "# Display the DataFrame\n",
+    "df = pd.read_xml('./files/states_complex.xml')\n",
     "print(df)"
    ]
   },
@@ -321,6 +299,64 @@
     "df.to_csv(csv_file, index=False)\n",
     "\n",
     "print(f\"Data has been written to {csv_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/matthewmartin/dream_machine/substack/articles/2024.07-12 - Flattening XML/.venv/lib/python3.12/site-packages/google/auth/_default.py:76: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
+      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n",
+      "/Users/matthewmartin/dream_machine/substack/articles/2024.07-12 - Flattening XML/.venv/lib/python3.12/site-packages/google/auth/_default.py:76: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
+      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from google.cloud import bigquery\n",
+    "import os\n",
+    "\n",
+    "def load_csv_to_bigquery(file_path, table_id):\n",
+    "    df = pd.read_csv(file_path)\n",
+    "\n",
+    "    filename = os.path.splitext(os.path.basename(file_path))[0]\n",
+    "    df['filename'] = filename\n",
+    "\n",
+    "    client = bigquery.Client()\n",
+    "\n",
+    "    job_config = bigquery.LoadJobConfig(\n",
+    "        source_format=bigquery.SourceFormat.CSV,\n",
+    "        autodetect=True,\n",
+    "        write_disposition=bigquery.WriteDisposition.WRITE_APPEND,\n",
+    "        create_disposition=bigquery.CreateDisposition.CREATE_IF_NEEDED,\n",
+    "        schema_evo=bigquery.SchemaUpdateOption.ALLOW_FIELD_ADDITION\n",
+    "    \n",
+    "    )\n",
+    "\n",
+    "    job = client.load_table_from_dataframe(df, table_id, job_config=job_config)\n",
+    "\n",
+    "    # Wait for the load job to complete\n",
+    "    job.result()\n",
+    "\n",
+    "    print(f\"Loaded {df.shape[0]} rows into {table_id} from {file_path}\")\n",
+    "\n",
+    "def main():\n",
+    "    # Paths to your CSV files\n",
+    "    csv_files = ['./files/California.csv', './files/Georgia.csv']\n",
+    "    table_id = 'your-project.your_dataset.your_table'  # Replace with your project ID, dataset ID, and table ID\n",
+    "\n",
+    "    for csv_file in csv_files:\n",
+    "        load_csv_to_bigquery(csv_file, table_id)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n",
+    "\n"
    ]
   }
  ],
