--- a/substack/articles/2024.07-12 - Flattening XML/scratchpad.ipynb
+++ b/substack/articles/2024.07-12 - Flattening XML/scratchpad.ipynb
@@ -221,23 +221,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       name  population   largest_city  land_mass_sqmi\n",
-      "0     Texas    30503301        Houston          261232\n",
-      "1  New York    19571216  New York City           54555\n"
+      "         name  population largest_city  land_mass_sqmi\n",
+      "0  California    39538223  Los Angeles          163696\n",
+      "1     Georgia    10711908      Atlanta           57906\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_xml('./files/states_simple.xml')\n",
-    "print(df)"
+    "import glob\n",
+    "f_pattern = './files/*_simple.xml'\n",
+    "file_paths = glob.glob(f_pattern)\n",
+    "df_list = [pd.read_xml(file_path) for file_path in file_paths]\n",
+    "df_stacked = pd.concat(df_list, ignore_index=True)\n",
+    "print(df_stacked)"
    ]
   },
   {
@@ -303,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -311,9 +315,29 @@
      "output_type": "stream",
      "text": [
       "/Users/matthewmartin/dream_machine/substack/articles/2024.07-12 - Flattening XML/.venv/lib/python3.12/site-packages/google/auth/_default.py:76: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
-      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n",
+      "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 7 rows into test_ds.states_flat from ./files/California.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/Users/matthewmartin/dream_machine/substack/articles/2024.07-12 - Flattening XML/.venv/lib/python3.12/site-packages/google/auth/_default.py:76: UserWarning: Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. See the following page for troubleshooting: https://cloud.google.com/docs/authentication/adc-troubleshooting/user-creds. \n",
       "  warnings.warn(_CLOUD_SDK_CREDENTIALS_WARNING)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 7 rows into test_ds.states_flat from ./files/Georgia.csv\n"
      ]
     }
    ],
@@ -334,8 +358,7 @@
     "        source_format=bigquery.SourceFormat.CSV,\n",
     "        autodetect=True,\n",
     "        write_disposition=bigquery.WriteDisposition.WRITE_APPEND,\n",
-    "        create_disposition=bigquery.CreateDisposition.CREATE_IF_NEEDED,\n",
-    "        schema_evo=bigquery.SchemaUpdateOption.ALLOW_FIELD_ADDITION\n",
+    "        create_disposition=bigquery.CreateDisposition.CREATE_IF_NEEDED\n",
     "    \n",
     "    )\n",
     "\n",
@@ -349,7 +372,7 @@
     "def main():\n",
     "    # Paths to your CSV files\n",
     "    csv_files = ['./files/California.csv', './files/Georgia.csv']\n",
-    "    table_id = 'your-project.your_dataset.your_table'  # Replace with your project ID, dataset ID, and table ID\n",
+    "    table_id = 'test_ds.states_flat'  # Replace with your project ID, dataset ID, and table ID\n",
     "\n",
     "    for csv_file in csv_files:\n",
     "        load_csv_to_bigquery(csv_file, table_id)\n",
