--- a/substack/articles/2024.07-12 - Flattening XML/scratchpad.ipynb
+++ b/substack/articles/2024.07-12 - Flattening XML/scratchpad.ipynb
@@ -246,22 +246,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         name  population largest_city  land_mass_sqmi      misc  water_sqmi\n",
-      "0     Georgia    10711908      Atlanta           57906  \\n               NaN\n",
-      "1  California    39538223  Los Angeles          163696  \\n            7737.0\n"
+      "         name  population largest_city  land_mass_sqmi  water_sqmi      misc\n",
+      "0  California    39538223  Los Angeles          163696      7737.0  \\n      \n",
+      "1     Georgia    10711908      Atlanta           57906         NaN  \\n      \n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_xml('./files/states_complex.xml')\n",
-    "print(df)"
+    "import pandas as pd\n",
+    "file_paths = ['./files/California.xml', './files/Georgia.xml']\n",
+    "df_list = [pd.read_xml(file_path) for file_path in file_paths]\n",
+    "df_stacked = pd.concat(df_list, ignore_index=True)\n",
+    "print(df_stacked)"
    ]
   },
   {
