--- a/substack/articles/2024.07.28 - DuckDb Syntax Sugar/scratchpad.ipynb
+++ b/substack/articles/2024.07.28 - DuckDb Syntax Sugar/scratchpad.ipynb
@@ -403,7 +403,7 @@
     "declare @sql nvarchar(max);\n",
     "declare @list nvarchar(max);\n",
     "\n",
-    "set @list = ((select concat('[', some_col,']' for xml path ('')));\n",
+    "set @list = STUFF((select concat('[', some_col,']' for xml path ('')),1,1);\n",
     "\n",
     "set @sql = N'select grouping_col, @list from some_table pivot(sum(some_other col) for col_list in @list)\n",
     "\n",
