--- a/substack/articles/2024.07.28 - DuckDb Syntax Sugar/scratchpad.ipynb
+++ b/substack/articles/2024.07.28 - DuckDb Syntax Sugar/scratchpad.ipynb
@@ -398,7 +398,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sql = \"\"\"\n",
     "\n",
     "declare @sql nvarchar(max);\n",
     "declare @list nvarchar(max);\n",
@@ -407,9 +406,7 @@
     "\n",
     "set @sql = N'select grouping_col, @list from some_table pivot(sum(some_other col) for col_list in @list)\n",
     "\n",
-    "exec sp_executesql @sql\n",
-    "\n",
-    "\"\"\""
+    "exec sp_executesql @sql\n"
    ]
   },
   {
